# wanderforge

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  ROADMAP.md  architecture.md  profile.csv  wanderforge.cfg
cmake/: wf_config.h.in
include/: app_controller.h  bitarray.h  camera.h  camera_controller.h  chunk.h  chunk_delta.h  chunk_renderer.h  chunk_streaming_manager.h  config_loader.h  mesh.h  overlay.h  planet.h  platform_input.h  platform_layer.h  region_io.h  render_system.h  renderer.h  streaming_service.h  vk_handle.h  vk_utils.h  wf_math.h  wf_noise.h  window_input.h  world_runtime.h  world_streaming_subsystem.h
include/ui/: ui_backend.h  ui_context.h  ui_controller.h  ui_id.h  ui_primitives.h  ui_text.h  ui_types.h
shaders/: chunk.frag  chunk.vert  debug_axes.vert  noop.comp  overlay.frag  overlay.vert  triangle.frag  triangle.vert
src/: app_controller.cpp  camera.cpp  camera_controller.cpp  chunk_delta.cpp  chunk_renderer.cpp  chunk_streaming_manager.cpp  config_loader.cpp  main.cpp  mesh_greedy.cpp  mesh_naive.cpp  overlay.cpp  planet.cpp  platform_layer.cpp  region_io.cpp  render_system.cpp  renderer.cpp  streaming_service.cpp  vk_app.cpp  vk_app.h  vk_utils.cpp  window_input.cpp  world_runtime.cpp  world_streaming_subsystem.cpp
src/ui/: ui_backend.cpp  ui_context.cpp  ui_controller.cpp  ui_primitives.cpp  ui_text.cpp
tools/: chunk_demo.cpp  region_demo.cpp  ringmap.cpp
